--- a/single/Vagrantfile
+++ b/single/Vagrantfile
@@ -1,10 +1,16 @@
 Vagrant.configure("2") do |config|
   
+  config.ssh.insert_key = false
+
+  #vbguest
+  config.vbguest.auto_update = false
+  config.vbguest.no_remote = true
+
   # Set Disksize for vb
   config.disksize.size = '10GB'
 
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = "1024"
+    vb.memory = "845"
     vb.customize ["modifyvm", :id, "--uartmode1", "disconnected"]
     vb.customize ['modifyvm', :id, '--clipboard', 'bidirectional']
   end
